--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,6 @@
 <body>
 	
 	<family-line></family-line>
-	<script src='bundle.js'></script>
+	<script src='dist/bundle.js'></script>
 </body>
 </html>
