--- a/client/web/index.html
+++ b/client/web/index.html
@@ -29,7 +29,7 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>client</title>
+  <title>FamilyLine</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
